[gd_scene load_steps=17 format=3 uid="uid://gpuyurp721oy"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_5btkv"]
[ext_resource type="Script" path="res://Scenes/ParallaxBackground.gd" id="2_kkd5p"]
[ext_resource type="Texture2D" uid="uid://qhvjrpuahqk8" path="res://assets/menu/Main Menu mj.png" id="2_q4vn8"]
[ext_resource type="Texture2D" uid="uid://cw1lcgq7e4id4" path="res://assets/menu/Play1.png" id="3_xy6n4"]
[ext_resource type="Texture2D" uid="uid://dedbpk3if3dk2" path="res://assets/menu/Play3.png" id="4_de6wv"]
[ext_resource type="Texture2D" uid="uid://iobexr7h2cs1" path="res://assets/menu/btn_high1.png" id="5_qulhn"]
[ext_resource type="Texture2D" uid="uid://8t4t3tbcdd55" path="res://assets/menu/btn_high2.png" id="6_cosmw"]
[ext_resource type="Texture2D" uid="uid://bt4yimo1dhl0i" path="res://assets/menu/logoooo.png" id="6_g0648"]
[ext_resource type="Texture2D" uid="uid://cyfa2qyb6f5kg" path="res://assets/menu/Cred1.png" id="7_6ij77"]
[ext_resource type="AudioStream" uid="uid://25mk10ep4lew" path="res://assets/sounds and music/sfx/button click/pop.mp3" id="7_xvjv7"]
[ext_resource type="AudioStream" uid="uid://cv17bdi5y8ae6" path="res://assets/sounds and music/music/nico's nextbots ost - menu.mp3" id="8_w3jx6"]
[ext_resource type="PackedScene" uid="uid://b83vdwhcmsujk" path="res://Scenes/highscores.tscn" id="9_3jk7x"]
[ext_resource type="FontFile" uid="uid://bce5ycxtp86nk" path="res://assets/fonts/BD_Cartoon_Shout.ttf" id="9_e1fo4"]
[ext_resource type="PackedScene" uid="uid://cv66t72qfnv4n" path="res://Scenes/set_name.tscn" id="11_isxal"]
[ext_resource type="PackedScene" uid="uid://6aom1koimkg4" path="res://Scenes/credit_screen.tscn" id="13_7kcd6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5baou"]
size = Vector2(600, 87)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_5btkv")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_kkd5p")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1433, 0)

[node name="BG" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_right = 4509.0
offset_bottom = 8000.0
scale = Vector2(0.16, 0.16)
texture = ExtResource("2_q4vn8")
expand_mode = 5
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="BG2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_left = 712.0
offset_right = 5221.0
offset_bottom = 8000.0
scale = Vector2(0.16, 0.16)
texture = ExtResource("2_q4vn8")
expand_mode = 5
stretch_mode = 5
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 713.0
offset_bottom = 1269.0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="Play" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0520095
anchor_bottom = 0.0520095
offset_top = 434.0
offset_right = 713.0
offset_bottom = 665.0
texture_normal = ExtResource("3_xy6n4")
texture_pressed = ExtResource("4_de6wv")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Highscores" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0535855
anchor_bottom = 0.0535855
offset_top = 675.0
offset_right = 713.0
offset_bottom = 906.0
texture_normal = ExtResource("5_qulhn")
texture_pressed = ExtResource("6_cosmw")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Credits" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.056101
anchor_top = 0.0299448
anchor_right = -0.056101
anchor_bottom = 0.0299448
offset_left = 40.0
offset_top = 946.0
offset_right = 753.0
offset_bottom = 1177.0
texture_normal = ExtResource("7_6ij77")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Banner" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0056101
anchor_top = -0.072498
anchor_right = 0.0056101
anchor_bottom = -0.072498
offset_left = 17.0
offset_top = 108.0
offset_right = 2604.0
offset_bottom = 1676.0
scale = Vector2(0.27, 0.27)
texture = ExtResource("6_g0648")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="NameLabel2" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 156.0
offset_top = 385.0
offset_right = 573.0
offset_bottom = 442.0
theme_override_colors/font_color = Color(1, 0.815686, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("9_e1fo4")
theme_override_font_sizes/font_size = 20
text = "Click the text to set the name"
vertical_alignment = 1

[node name="WelcomeText" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 107.0
offset_top = 313.0
offset_right = 665.0
offset_bottom = 400.0
theme_override_constants/separation = -3

[node name="WelcomeLabel" type="Label" parent="Panel/WelcomeText"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("9_e1fo4")
theme_override_font_sizes/font_size = 50
text = "Welcome, "
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="Panel/WelcomeText"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("9_e1fo4")
theme_override_font_sizes/font_size = 50
text = "Player!"
vertical_alignment = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="Panel/WelcomeText"]
position = Vector2(271, 38)
shape = SubResource("RectangleShape2D_5baou")

[node name="Screens" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HighScores" parent="Screens" instance=ExtResource("9_3jk7x")]
visible = false
layout_mode = 1
offset_left = 338.0
offset_top = 596.0
offset_right = 338.0
offset_bottom = 596.0

[node name="SetName" parent="Screens" instance=ExtResource("11_isxal")]
visible = false
layout_mode = 1
offset_left = 338.0
offset_top = 617.0
offset_right = 338.0
offset_bottom = 617.0

[node name="Credits" parent="Screens" instance=ExtResource("13_7kcd6")]
visible = false
layout_mode = 1
offset_left = 338.0
offset_top = 596.0
offset_right = 338.0
offset_bottom = 596.0

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xvjv7")

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_w3jx6")
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="Panel/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/Highscores" to="." method="_on_highscores_pressed"]
[connection signal="pressed" from="Panel/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Panel/WelcomeText/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="finished" from="BGM" to="." method="_on_bgm_finished"]
